syntax = "proto3";

package protobuf;
option go_package = "/pb";
import "google/api/annotations.proto";

import "google/type/receiver.proto";
service MessageService{
  rpc SendDailyPredictions(DailyPredictionsRequest) returns (DailyPredictionsResponse){
    option (google.api.http) = {
      post: "/api/v1/sendPredictions";
    };
  }
}
message DailyPredictionsResponse{
  bool responseStatus = 1;
}
message Receiver{
  string Zodiac = 1;
  string Email  = 2;
}

message DailyPredictionsRequest{
  string day = 1;
  repeated google.type.Receiver receivers = 2;
}